--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,7 @@
 
 * {
     box-sizing: border-box;
-
+    
 }
 
 body {
@@ -12,6 +12,19 @@ body {
     margin: auto;
 }
 
-div{
-    background-color: coral;
+.first-row{
+    display: flex;
+  }
+
+  .third-row{
+      display: flex;
+  }
+
+  @media only screen and (min-width: 768px) {
+  .second-row{
+    display: flex;
+  }
+  .fix-row{
+      display: flex;
+  }
 }
