--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 .a {
-    width: 960px;
-    height: 100px;
+  width: 960px;
+  height: 100px;
     background-color:#1a000d ;
     color: white;
   }
@@ -14,7 +14,6 @@
   }
   
   .c {
-    float: left;
     width: 380px;
     height: 200px;
     background-color: #b30059;
@@ -22,31 +21,30 @@
   }
   
   .d {
-    float: right;
     width: 380px;
     height: 200px;
     background-color: #e60073;
   }
   
   .e {
-    float: left;
+   
     background-color: #ff3399;
   
   }
   
   .f {
-    float: left;
+    
     background-color: #ff66b3;
     
   }
   
   .g {
-    float: left;
+    
    background-color: #ff99cc;
   }
   
   .h {
-    float: left;
+    
   background-color: #ffe6f2;
   }
   
@@ -55,13 +53,13 @@
   .g,
   .h {
     width: 190px;
-    height: 250px;
+  height: 250px;
   }
   
   .i {
+    float: right;
     width: 760px;
     height: 150px;
-    float: left;
     background-color: #000000;
     color: white;
   }
@@ -69,8 +67,16 @@
   div {
     border: solid 1px #000000;
   }
+  .b{
+    float: left;
+  }
   
   @media only screen and (max-width: 768px) {
+    body{
+      width: 576px;
+      margin: auto;
+    
+      }
 
 div{
   background-color: cyan;
@@ -80,65 +86,120 @@ div{
       width: 480px;
     }
   
-    div {
-      border: solid 1px #000000;
-      font-size: 200%;
+    .first-row{
+      width: 480px;
+      flex-direction: column;
     }
-  
+    
+    .third-row{
+      display: flex;
+    }
+    
+    .fix-row{
+      display: flex;
+    }
+    
     .a {
-      width: 480px;
-      height: 75px;
+      width: 576px;
+      height: 100px;
       
+      line-height: 90px;
     }
-  
+    
     .b {
-      width: 480px;
-      height: 150px;
+      width: 576px;
+      line-height: 90px;
+      height: 100px;
       
     }
-  
-  
+    
+   
+    
     .c,
     .d {
-      clear: both;
-      width: 480px;
-      height: 125px;
+      line-height: 140px;
+      width: 576px;
+      height: 150px;
     }
+    
   
-    .e {
-      float: left;
-      
-    }
-  
-    .f {
-      float: right;
-      
-    }
-  
-    .g {
-      clear: left;
-      float: left;
-      
-    }
-  
-    .h {
-      float: right;
-      
-    }
-  
+    
     .i {
-      clear: both;
-      
-      width: 480px;
-      height: 80px;
+      float: left;
+     
+      width: 576px;
+      height: 150px;
+      line-height: 150px;
     }
-  
+    
     .e,
     .f,
     .g,
     .h {
-      width: 240px;
+      line-height: 220px;
+      width: 288px;
       height: 250px;
     }
-  
-  }
+    }
+    /* ------------- for Mobile ------------ */
+    @media only screen and (max-width: 600px) {
+      body,main {
+        width: 480px;
+      }
+    
+      div {
+        border: solid 1px #000000;
+        font-size: 200%;
+      }
+    
+      .first-row{
+        width: 480px;
+        flex-direction: column;
+      }
+    
+      .third-row{
+        display: flex;
+      }
+    
+      .fix-row{
+        display: flex;
+      }
+    
+      .a {
+        width: 480px;
+        height: 75px;
+        
+      }
+    
+      .b {
+        width: 480px;
+        height: 150px;
+        
+      }
+    
+     
+      .c,
+      .d {
+        width: 480px;
+        height: 125px;
+      }
+    
+     
+    
+      
+      .i {
+        float: left;
+        
+        width: 480px;
+        height: 80px;
+      }
+    
+      .e,
+      .f,
+      .g,
+      .h {
+        width: 240px;
+        height: 250px;
+      }
+    }
+    
